examples/invalid/test16.alice

The looking-glass hatta ()
opened
  x was a number.
  y was a number.
  x became 10 > 20.
closed 
